kubernetes/deploy/proxies/internal/nodes/credigree/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: credigree
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`credigree.vandeneede.org`)
    services:
    - name: credigree
      port: 8006
      scheme: https
